crates/parser/src/tests/snapshots/kcl_parser__tests__file__assert_1.snap
---
source: crates/parser/src/tests/file.rs
expression: "$crate :: tests :: parsing_file_string(\"testdata/assert-01.k\")"
---
{
  "filename": "assert-01.k",
  "doc": null,
  "body": [
    {
      "node": {
        "type": "Assert",
        "test": {
          "node": {
            "type": "NumberLit",
            "binary_suffix": null,
            "value": {
              "type": "Int",
              "value": 1
            }
          },
          "filename": "assert-01.k",
          "line": 1,
          "column": 7,
          "end_line": 1,
          "end_column": 8
        },
        "if_cond": null,
        "msg": null
      },
      "filename": "assert-01.k",
      "line": 1,
      "column": 0,
      "end_line": 1,
      "end_column": 8
    },
    {
      "node": {
        "type": "Assert",
        "test": {
          "node": {
            "type": "NumberLit",
            "binary_suffix": null,
            "value": {
              "type": "Int",
              "value": 2
            }
          },
          "filename": "assert-01.k",
          "line": 2,
          "column": 7,
          "end_line": 2,
          "end_column": 8
        },
        "if_cond": null,
        "msg": {
          "node": {
            "type": "StringLit",
            "is_long_string": false,
            "raw_value": "\"msg\"",
            "value": "msg"
          },
          "filename": "assert-01.k",
          "line": 2,
          "column": 10,
          "end_line": 2,
          "end_column": 15
        }
      },
      "filename": "assert-01.k",
      "line": 2,
      "column": 0,
      "end_line": 2,
      "end_column": 15
    },
    {
      "node": {
        "type": "Assert",
        "test": {
          "node": {
            "type": "NameConstantLit",
            "value": "True"
          },
          "filename": "assert-01.k",
          "line": 3,
          "column": 7,
          "end_line": 3,
          "end_column": 11
        },
        "if_cond": null,
        "msg": null
      },
      "filename": "assert-01.k",
      "line": 3,
      "column": 0,
      "end_line": 3,
      "end_column": 11
    }
  ],
  "comments": []
}
